Modif <head> pour icônes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Agenda Coran">
-    <link rel="apple-touch-icon" href="/images/apple-touch-icon-180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon-128.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-config" content="/browserconfig.xml">
+    <link rel="apple-touch-icon" href="/Agenda-Coran/images/apple-touch-icon-180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Agenda-Coran/images/icon-128.png">
+    <link rel="manifest" href="/Agenda-Coran/manifest.json">
+    <meta name="msapplication-config" content="/Agenda-Coran/browserconfig.xml">
     <title>برنامج القرآن الكريم</title>
     <style>
         :root {
